--- a/_posts/2021-07-20-0719-0725.md
+++ b/_posts/2021-07-20-0719-0725.md
@@ -1341,4 +1341,68 @@ console.log(solution(8, 3));
 * 새로운 n개의 요소를 가진 배열을 선언하고, 배열에 1부터 n까지 값을 초기화했다.
 * 배열을 돌면서, 배열 내장함수를 사용하여 요구사항을 만족시키고 최종 남은 값을 출력했다.
 
+## 0724
+## Git 수업 내용 정리
+### gitignore
+* 이런 종류의 파일들은 트래킹할 필요 없다고 깃에게 알려준다.
+
+### trailing comma
+* 묶음 자료형 마지막 아이템 뒤에 ,를 붙이는 것
+* 아이템을 한 줄씩 작성하고 이 방법을 적용하면 깃에서 추가된 아이템을 한 눈에 확인할 수 있다.
+
+### Branch
+* 분기점을 생성하여 독립적으로 코드를 변경할 수 있도록 도와주는 모델
+
+#### branch 확인 명령어
+* `git branch`: 사용 가능한 로컬 브랜치 표시
+* `git branch -r`: 사용 가능한 원격 브랜치 표시
+* `git branch -a`: 사용 가능한 모든(로컬 + 원격) 브랜치 표시
+
+#### branch 생성, 이동, 병합, 삭제 명렁어
+* `git branch 브랜치명`: 브랜치 생성
+* `git switch 브랜치명`: 해당 브랜치로 이동. 최신 명령어
+	* 이전에는 `git checkout 브랜치명` 명령어를 사용
+* `git merge 브랜치명`: 해당 브랜치를 병합. 
+	* main 브랜치에서 자식 브랜치를 병합하고 싶다면, main 브랜치로 이동해서 병합할 자식 브랜치를 선택
+* `git branch -d stem`: 로컬 브랜치 삭제. 로컬에서만 삭제되고 원격 브랜치는 살아있다.
+	* `-D` 옵션을 주면 충돌이 해결되지 않거나 정상적으로 머지되어 있지 않아서 삭제가 불가능한 브랜치를 강제로 삭제해준다.
+
+## branching models
+### git flow
+* (hotfix) - main - (release) - develop - feature
+* 가장 많이 적용, 각 단계가 명확히 구분. 복잡
+* git-flow는 병합(merge) 기반의 솔루션. feature 브랜치를 리베이스 하지 않는다.
+
+#### 설치 (mac os)
+`brew install git-flow-avh`
+
+#### 초기화
+* `git flow init`
+* 기존 git 저장소 내에서 초기화하는 것으로 git-flow의 사용을 시작
+* 기본 값을 사용하기를 권장
+
+#### 새 기능 시작
+* `git flow feature start 기능이름`
+* 새 기능의 개발은 'develop' 브랜치에서 시작한다.
+* 'develop'에 기반한 새 기능 브랜치를 생성하고, 그 브랜치로 전환
+
+#### 기능 완료
+* `git flow feature finish 기능이름`
+* 기능이름 브랜치를 'develop'에 병합(merge)한다.
+* 기능 브랜치를 삭제한다.
+* 'develop' 브랜치로 전환한다.
+
+#### 릴리스 시작
+* `git flow release start 릴리스명`
+* 'develop' 브랜치로부터 'release' 브랜치를 생성한다.
+
+#### 릴리즈 완료
+* `git flow release finish 릴리스명`
+* git 브랜칭 중에서 가장 큰 단계
+* 'release' 브랜치를 'main' 브랜치에 병합(merge)
+* 릴리스를 릴리스 이름으로 태그
+* 릴리스를 'develop' 브랜치로 재병합
+* 'release' 브랜치 삭제
+* develop과 main 브랜치를 각각 remote에 push해서 원격저장소에 적용해줘야 한다.
+* 마지막으로 `git push --tags`를 사용해 태그들을 push 해야 한다.
 
