--- a/_posts/2021-07-20-0719-0725.md
+++ b/_posts/2021-07-20-0719-0725.md
@@ -1403,6 +1403,90 @@ console.log(solution(8, 3));
 * 릴리스를 릴리스 이름으로 태그
 * 릴리스를 'develop' 브랜치로 재병합
 * 'release' 브랜치 삭제
-* develop과 main 브랜치를 각각 remote에 push해서 원격저장소에 적용해줘야 한다.
 * 마지막으로 `git push --tags`를 사용해 태그들을 push 해야 한다.
+* develop과 main 브랜치를 각각 remote에 push해서 원격저장소에 적용해줘야 한다.
 
+## 0725
+### 되돌리기 관련 명령어
+#### Rename
+* Worst
+	* `mv server.py main.py`
+	* 파일이 지워지고, 새로 파일이 생성된다. 의도에 맞지 않음
+* Best
+	* `git mv server.py main.py`
+	* 의도에 맞게 파일을 rename하고 바로 커밋한다.
+
+#### Undoing
+* `git checkout -- .` or `git checkout -- {filename}`
+* 최신 깃에서는 `git restore -- {filename}`
+
+#### Unstaging
+* 스테이지에서 다시 워킹 디렉토리로 보낸다.
+* `git reset HEAD {filename}`
+
+#### Edit lastest commit
+* `git commit --amend`
+* 가장 최신 커밋 메시지를 수정한다.
+
+#### Reset Commit
+* 협업 시, push 후에 절대로 사용하지 말 것
+* Worst case: Reset
+	* `git reset --hard HEAD~3`
+	* `git push -f origin <branch>`
+	* HEAD부터 세개의 커밋을 되돌린다는 뜻
+	* 잘못한 이력도 commit으로 박제하고 수정한 이력을 남기자
+* Best case: Revert
+	* `git revert --no-commit HEAD~3`
+	* `git commit`
+	* `git push origin <branch>`
+	* `--no commit` 옵션은 원래 revert를 하나씩 해야하는데 n개를 한 번에 가능하게 해준다.
+	* 잘못하기 전 과거로 돌아가 최신을 유지하면서 되돌렸다는 이력을 commit으로 남겨 모든 팀원이 이 사항을 공유할 수 있다.
+
+### 협업
+#### Collaboration
+* 어떤 리포지토리에 협업을 하고싶은 사람이 있다면, 콜라보레이터로 추가해서 같이 작업을 할 수 있다.
+* 초대받은 사람이 자유롭게 push할 수 있지만, 협업할 때는 적절하지 않다.
+* 코드리뷰를 받고 싶거나, 이슈나 프로젝트 관리 등 본 코드와 관련 없는 일을 하는 사람한테만 초대한다. (충돌이 많이 발생하는 문제가 있기 때문)
+
+### Fork and Merge
+#### 팀장이 할 일
+1. 팀장이 repository를 github에서 생성한다.
+2. 팀장은 본인의 repo 주소를 복사하여 clone한다.
+3. develop을 만든 뒤에 다른 사람들이 가져가야 하므로, `git flow init`를 사용해 develop 브랜치를 만든다.
+	* 실제 일을 하는 사람들은 develop이라는 브랜치를 사용하기 때문에
+4. develop을 처음 쓰는 거기 때문에 `git push -u origin develop` 명령어를 사용해서  푸시를 해준다.
+5. 팀장은 본인 repo에 issue가 발생하면 답글, 할당, 라벨 등을 해준다.
+6. project를 생성하여 issue를 관리한다. 
+7. 팀원이 pull request를 보내면 메일이 오는데, 클릭하면 파일 변화를 확인할 수 있다.
+	* 변화 파일에서 코드를 클릭하여 코멘트를 남길 수 있다.
+	* Finish your review에서 request changes를 선택하고 리뷰를 보내면 댓글이 달린다.
+8. 작업이 확인되면 approve 처리를 하고, merge pull request 버튼을 글릭하고 confirm 버튼까지 클릭하면 팀장의 remote repo에 작업 결과가 반영된다.
+9. remote repo에 반영된 작업을 로컬에서도 받아와야 하므로, `git fetch origin develop` 명령어로 패치를 받는다.
+10. 패치가 FETCH_HEAD로 임시 브랜치로 쌓이게 되는데, 이 FETCH_HEAD를 develop에 merge한다.
+	* `git merge FETCH_HEAD`
+
+
+#### 팀원이 할 일
+1. 팀장이 만든 repo 주소로 들어가서 Fork를 한다.
+	* fork한 레포는 팀원의 소유가 되기 때문에 자유롭게 올릴 수 있다.
+	* 작업물을 본 코드에 적용해달라고 pull request를 할 수 있다.
+2. 본인의 repo를 clone한다.
+3. 팀원도 `git flow init`을 한다.
+	* 각자 다른 로컬 저장소기 때문에, 각자 해야한다.
+4. 팀장의 repo에 방문하여 issue를 작성한다.
+5. 이슈 확인을 받고, `git flow feature start 기능이름`으로 작업을 진행한다.
+6. 작업을 마치고 `git flow feature finish 기능이름`으로 작업을 마무리한다.
+7. 팀원의 develop에서 팀장의 develop으로 넘겨야 하므로, `git push -u origin develop`으로 우선 remote repo로 보낸다.
+8. 팀원의 repo를 확인하면 push 받은 내역을 인지하여, Compare&pull request 버튼이 활성화된다.
+9. 팀원의 develop -> 팀장의 develop으로 설정하고 제목과 내용을 작성하여 pull request를 생성한다.
+	* 내용에는 해당 pull request가 어떤 이슈에 대한 해결인지 `resolved: #번호`를 이용해 이슈 번호를 작성한다.
+10. 팀장에게 수정사항을 받으면 해당 작업을 진행한다.
+	* 	pull request가 열려있는 상태에서는 팀원의 develop에서 push가 발생하면 github에서는 지금 열려있는 pull request에 대한 보수공사로 판단한다.
+	* 그래서 pull request 밑에 자동으로 붙는다.
+	* develop에서 바로 작업을 진행하고 push를 해서 작업을 마무리한다.
+11. 나머지 팀원들도 패치하고 병합한다. upstream이 설정되어 있지 않은 경우, 설정해줘야 한다.
+	* `git remote add upstream {팀장저장소주소}`
+	* `git fetch upstream develop`
+	* `git merge FETCH_HEAD`
+	* `git push`
+	* 팀원은 팀장과 다르게 upstream 저장소를 패치해야 한다.
