--- a/_posts/2021-07-28-0726-0801.md
+++ b/_posts/2021-07-28-0726-0801.md
@@ -283,3 +283,304 @@ console.log(solution(["longlong", "longtong", "longbig"]));
 * 접두어를 잘라내서 비교해야 하므로, substring으로 앞 글자부터 접두어를 잘라내고 그 값이 맵 sh에 있는지 확인하여 없다면 맵에 접두어를 키로하고 값을 1로한 것을 저장하였다.
 * 값이 맵 sh에 있다면 각 단어가 모두 다르지 않기 때문에 플래그를 false로 만들고, break로 가장 안쪽 반복문을 빠져나갔다.
 * 그리고 안쪽 반복문이 끝날 때마다 플래그 값을 확인했는데, 값이 true라면 맵 sh에서 키에 대한 값이 모두 다른 것이라는 뜻이기 때문에 전체 반복문을 빠져나갔다.
+
+## 0727
+# 12일 차 자료구조 / 알고리즘
+## 알고리즘
+### 수열 축소
+![05-01](../../assets/images/algorithm/05/01.png)
+
+```javascript
+function solution(nums, m) {
+    let answer;
+    let n=nums.length
+
+    for (let i = 0; i < m; i++) {
+        for (let j = 0; j < n-i-1; j++) {
+            nums[j] = nums[j+1]-nums[j]
+        }
+    }
+    answer = nums.slice(0, n-m);  // 퀴즈
+    return answer;
+}
+
+console.log(solution([5, 3, 7, 9, -2], 1));
+console.log(solution([5, 3, 7, 9, -2], 2));
+```
+* 첫 번째 반복문은 길이 축소 작업을 수행해야 하는 횟수만큼 반복하고, 두 번째 반복문은 n - 1 - i 번 만큼 반복한다.
+	* n + 1번째 위치하는 요소에서 n 번째 위치하는 요소를 빼는 작업을 하기 때문에 n - 1번 반복하고, i가 증가함에 따라 배열의 크기가 줄어들게 되어 n - 1 - i번 반복한다.
+* 반복문 내부에서 nums 배열의 j 번째 요소를 `nums[j+1]-nums[j]`로 대체하였다.
+* 반복문이 모두 끝나고, n-m까지의 배열을 잘라서 반환하였다.
+
+---
+### 가장 높은 증가수열
+![05-02](../../assets/images/algorithm/05/02.png)
+
+```javascript
+function solution(nums) {
+    let answer = 0;
+    let sum = 0;
+
+    for (let i = 1; i < nums.length; i++) {
+        if (nums[i-1] < nums[i]) {
+            sum += (nums[i] - nums[i-1]);
+        } else {
+            answer = Math.max(sum, answer);
+            sum = 0;
+        }
+    }
+    answer = Math.max(answer, sum);
+
+    return answer;
+}
+
+console.log(solution([5, 2, 4, 7, 7, 3, 9, 10, 11]));
+console.log(solution([8, 12, 2, 3, 7, 6, 20, 3]));
+```
+* i를 1부터 배열의 길이까지 반복하여  `nums[i - 1] < num[i]`라면 숫자가 증가중이므로 변수 sum에 증가한 숫자만큼 더하였고, 그렇지 않다면 증가하지 않은 상황이므로 answer에 담긴 값과 비교해 더 큰 값을 answer에 담았다.
+* 그리고 계속 반복문을 돌아야해서 sum을 0으로 초기화시키고 반복문을 진행했다.
+* 반복문이 모두 끝난 후에는 끝까지 수열이 증가하다 끝나서 answer에 현재 sum이 담기지 못했을 수 있으므로, sum과 answer를 비교해서 큰 값을 답에 넣어주는 작업을 한 번 더 수행한다.
+
+---
+### 가장 긴 수열
+![05-03](../../assets/images/algorithm/05/03.png)
+* 매개변수 형식 2는 답이 잘못되었다. 8 -> 4
+
+```javascript
+function solution(nums) {
+    let answer;
+    let up = 1;
+    let down = 1;
+    let maxUp = 0;
+    let maxDown = 0;
+
+    for (let i = 1; i < nums.length; i++) {
+        if (nums[i - 1] < nums[i]) {
+            up++;
+        } else {
+            maxUp = Math.max(up, maxUp);
+            up = 1;
+        }
+
+        if (nums[i-1] > nums[i]) {
+            down++;
+        } else {
+            maxDown = Math.max(down, maxDown);
+            down = 1;
+        }
+    }
+    maxUp = Math.max(up, maxUp);
+    maxDown = Math.max(down, maxDown);
+
+    answer = Math.max(maxUp, maxDown);
+
+    return answer;
+}
+
+console.log(solution([5, 3, 6, 7, 9, 8, 5, 3, 1, 2]));
+console.log(solution([5, 2, 4, 7, 6, 3, 9, 10, 11]));
+console.log(solution([1, 2, 3, 3, 4, 5, 6, 7, 7]));
+```
+* 나는 변수에 증가 상황일 때와, 감소 상황일 때의 값을 지정하고 문제를 해결했었다.
+* 하지만 `if else`문을 두 번 사용해서 좀 더 가독성 좋게 문제를 해결할 수 있는 방법도 있었다.
+* 증가한 횟수를 저장하는 up 변수, 내려간 횟수를 저장하는 down 변수를 선언하고 기본 값을 1로 설정하였다.
+* `nums[i - 1] < nums[i]`인 경우라면 up 변수를 1 증가시켰고, 그렇지 않다면 최대 증가 횟수를 저장하는 maxUp 변수에 현재 maxUp 변수에 담긴 값과 up 변수에 담긴 값을 비교해서 큰 값을 저장했다. 그리고 up 변수를 1로 초기화했다.
+* `nums[i - 1] < nums[i]`도 반대의 경우로 마찬가지로 진행했다.
+* 반복문이 끝나고, 마지막까지 증가하거나 감소한 경우의 값도 비교해서 저장하기 위해서 maxUp 변수와 up 변수, maxDown 변수와 down 변수를 비교해서 큰 값을 저장하는 작업을 한 번 더 진행했다.
+* 마지막으로 maxDown 변수와 maxUp 변수 중에 큰 값을 결과로 반환했다.
+
+---
+### 바이토닉 수열
+![05-04](../../assets/images/algorithm/05/04.png)
+
+```javascript
+function solution(nums) {
+    let n = nums.length;
+    let answer = "YES"
+    let i = 0;
+
+    while(i < n - 1 && nums[i] < nums[i+1]) { // 증가수열
+        i++;
+    }
+    if(i===0 || i===n-1) answer="NO";
+
+    while(i < n - 1 && nums[i] > nums[i+1]) { // 감소수열
+        i++;
+    }
+    if(i!==n-1) answer="NO";
+
+    return answer;
+}
+
+console.log(solution([1, 2, 3, 4, 5, 3, 1]));
+console.log(solution([1, 3, 4, 5, 5, 6, 4, 3]));
+console.log(solution([1, 2, 3, 4, 5]));
+```
+* 기존에는 이 문제를 증가 및 감소를 허용하는지에 대한 boolean 값으로 정해서, 허용하지 않는 경우에 값을 증가하거나 감소하려하면 바로 answer를 NO로 반환해주는 방식으로 해결하였다.
+* 하지만 while문을 잘 활용해서 문제를 해결하는 방법이 있었다.
+* while문에서 사용할 변수 i를 선언하고, i가 n - 1 보다 작으면서 증가할 동안 i를 계속 증가시켰다.
+	* 조건의 위치 중요! `i < n - 1`이 뒤에 있으면 `nums[i + 1]`이 undefined를 가리킬 수도 있다.
+	* 반복문을 빠져나오면 i가 0이거나 n-1이면 NO를 반환했다.
+	* 0이라는 것은 처음부터 감소했다거나, 끝까지 증가하기만 했다는 것이기 때문
+* 그 밑에 while문을 하나 더 사용해서 i가 n - 1보다 작으면서 감소할 동안 i를 증가시켰다.
+	* 반복문을 빠져나오면 i가 n - 1이 아니면 NO를 반환했다.
+	* 반복문이 끝나기 전에 증가하거나 같은 구간이 발생했기 때문
+* 반복문을 무사히 마치면 기본 값인 YES를 반환한다.
+* while문을 활용하는 것을 두려워하는 것 같다. 생각해보면 코딩테스트를 하면서 while문을 사용해서 문제를 해결한 적이 없다. 이번 기회에 while문을 사용할 수 있는 문제에서는 사용해봐야겠다.
+
+---
+### 거리 두기
+![05-05](../../assets/images/algorithm/05/05.png)
+
+```javascript
+function solution(nums) {
+    let answer = 0;
+    let d = 1000;
+    let distance = [];
+
+
+    for (let i = 0; i < nums.length; i++) {
+        if (nums[i] === 1) {
+            distance[i] = 0;
+            d = 0;
+        } else {
+            d++;
+            distance[i] = d;
+        }
+    }
+
+    d = 1000;
+    for (let i = nums.length - 1; i >= 0; i--) {
+        if (nums[i] === 1) {
+            distance[i] = 0;
+            d = 0;
+        } else {
+            d++;
+            distance[i] = Math.min(d, distance[i]);
+        }
+    }
+    answer = Math.max(...distance);
+
+    return answer;
+}
+
+console.log(solution([1,0,0,0,1,0,0,1,0,1]));
+```
+* 이 문제의 풀이법은 상당히 흥미로웠다. 나는 for문 안에 If문을 사용해서 상황을 나눠서 구현했는데, 왼쪽에서의 떨어진 거리를 구하고 오른쪽에서 떨어진 거리를 구해서 더 작은 값을 반환한다는 접근법이 신기했다.
+* 우선 끝에 벽이 있을 경우에는 임의로 큰 값을 지정했다.
+* 변수 d를 1000으로 지정하고, 거리를 담는 배열인 distance를 선언했다.
+* 배열을 왼쪽에서부터 오른쪽으로 탐색해서, 해당 요소가 1이면 사람이 있는 경우이므로 distance에 0을 넣고, d를 0으로 초기화한다.
+* 그렇지 않다면 d를 증가시키고, distance배열에 d를 저장한다. 
+* 반복문이 끝나면 다시 d를 1000으로 초기화하고 이번에는 뒤에서부터 요소가 1이라면 distance에 0을 넣고, d를 0으로 초기화한다.
+* 그렇지 않다면 d를 증가시키고, distance에 d와, distance[i] 중 작은 값을 저장한다.
+* 그러면 요소 기준 양쪽에서 1이 들어있는 거리중 짧은 거리가 담기게 된다.
+* `Math.max(...distance)`를 사용해서 distance에 담긴 요소 중 가장 큰 값을 반환한다.
+	* `Math.max()` 메서드의 인자로 스프레드 연산자 배열을 사용하면, 해당 배열 요소 중 가장 큰 값을 반환할 수 있다.
+
+---
+### 2차원 배열 1의 개수
+![05-06](../../assets/images/algorithm/05/06.png)
+
+```javascript
+function solution(nums) {
+    let answer = nums.map((row, i) => ({i, cnt: row.reduce((a, b) => a + b, 0)}))
+                     .sort((a, b) => a.cnt-b.cnt)
+                     .map(ob => ob.i);
+
+    return answer;
+}
+
+console.log(solution([[1, 0, 0, 1], [0, 0, 0, 1], [1, 1, 0, 1], [0, 1, 0, 1]]));
+```
+* 행의 값을 모두 더해서 값이 큰 순서대로 행의 순서 배열을 반환하는 문제인대, 쉬운 문제이지만 js의 내장함수를 사용해서 정말 짧고 간결하게 해결하는 방법이 있었다.
+* 우선 map함수를 이용해서 객체 배열을 반환했는데, i는 인덱스이고 cnt는 reduce를 사용해서  각 행의 1의 개수를 더한 값이 들어있다.
+	* 즉, 각 행의 인덱스와 행에서의 1의 개수가 담긴 객체 배열을 반환했다.
+* 그리고 바로 이어서 sort 함수를 사용해 cnt를 기준으로 오름차순 정렬했다.
+* 그리고 바로 map을 사용해서 객체의 인덱스를 반환했다.
+* 이 문제를 보고, 자바스크립트에서 내장함수를 이런 식으로 사용하는 거구나 하고 이해했다.
+
+---
+### 행과 열의 최솟값
+![05-07](../../assets/images/algorithm/05/07.png)
+```javascript
+function solution(nums) {
+    let answer = [];
+    let n = nums.length;
+
+    for (let i = 0; i < n; i++) {
+        let min = nums[i][0];
+        let pos=0;
+        for (let j = 0; j < n; j++) {
+            if (nums[i][j] < min) {
+                min = nums[i][j];
+                pos = j;
+            }
+        }
+
+        let row;
+        for(row = 0; row < n; row++) {
+            if(nums[row][pos]< min) break;
+        }
+        if(row==n) answer.push(min);
+    }
+
+    answer.sort((a, b) => a - b);
+    return answer;
+}
+
+
+console.log(solution([[4, 6, 22, 1], [9, 3, 10, 12], [30, 7, 20, 2], [15, 8, 5, 13]]));
+```
+* 기존에는 각 숫자를 받아와서, 숫자가 행과 열에서 최솟값인지 boolean 값을 반환하는 함수를 추가 작성해서 문제를 해결했다.
+* 하지만 그럴 필요 없이 2중 for문을 돌려서 첫 번째 반복문에서 변수 min에 각 행의 첫 번째 요소를 삽입하고 각 열의 최솟값을 가진 요소의 열 정보를 저장할 변수 pos를 선언했다.
+* 두 번째 반복문에서 열의 최솟값을 구한 뒤, 해당 열의 정보를 j에 저장했다.
+* 그리고 밑에 또 다른 두 번째 반복문을 선언하고, 열을 고정한 채 반복문을 돌려서 min보다 더 작은 값이 있다면 해당 반복문을 break했다.
+* 해당 반복문이 끝까지 돌았는지를 조건으로, 끝까지 돌았다면 min이 최솟값이므로 정답 배열에 min을 push한다.
+* 정답 배열을 오름차순 정렬해서 반환하였다.
+
+---
+### 봉우리
+![05-08](../../assets/images/algorithm/05/08.png)
+
+
+```javascript
+function solution(arr) {
+    let answer=0;
+    let n = arr.length;
+    let dx = [-1, 0, 1, 0];
+    let dy = [0, 1, 0, -1];
+
+    for (let i=0; i < n; i++) {
+        for (let j = 0; j < n; j++)  {
+            let flag=true;
+            for(let k =0; k<4; k++) {
+                let nx=i+dx[k];
+                let ny=j+dy[k];
+                if(nx>=0 && nx<n && ny>=0 && ny<n && arr[nx][ny]>=arr[i][j]) {
+                    flag=false;
+                    break;
+                }
+            }
+            if(flag) answer++;
+        } 
+    }
+
+    return answer;
+}
+
+console.log(solution([[5, 3, 7, 2, 3], [3, 7, 1, 6, 1], [7, 2, 5, 3, 4], [4, 3, 6, 4, 1], [8, 7, 3, 5, 2]]));
+```
+* 나는 0이 포함된 배열을 선언해서, 해당 배열에서 반복문과 if문을 사용해서 문제를 해결했다.
+	* 이 문제의 경우 내가 푼 방법도 좋은 거 같았지만, 좀 더 난이도 있는 문제에서도 활용할만한 개념을 알게 되었다.
+* 이 문제 풀이의 핵심은 위치 배열의 선언이다. 변수 dx는 행, dy는 열을 기준으로 12시, 3시, 6시, 9시 시계 방향으로 돌 때마다 이동하는 값을 배열로 선언했다.
+	* 처음에 조금 헷갈렸던 것은 dx의 경우 수학 함수 그래프를 생각하고 왜 12시 방향이 1이 아니고 -1이지 생각했다.
+	* 하지만 배열로 생각을 하니 쉽게 이해가 되었다.
+* 2중 반복문으로 각 요소에 접근했고, flag를 true로 초기화했다.
+* 그 안에서 위치 배열의 길이만큼 반복문을 돌려서 nx에는 현재 행 정보 + dx[k]를, ny에는 현재 열 정보 + dy[k] 값을 할당했다.
+	* 이렇게 하면 nx, ny에는 해당 요소를 기준으로 위, 아래, 좌, 우 요소의 인덱스 값이 저장된다.
+* nx와 ny가 0보다 크거나 같으면서, n보다는 작으면서, arr[i][j]보다 arr[nx][ny]가 크거나 같다를 조건으로 걸고, 이 안에 하나라도 해당된다면 flag를 false로 바꾸고 break로 반복문을 빠져나갔다.
+	* 여기서 nx와 ny가 0보다 크거나 같으면서, n보다는 작으면서 조건을 먼저 써 줘야 한다.
+	* nx, ny가 유효하지 않는 값일 때 비교하는 일이 없도록 하기 위해서!!
+	* `&&`를 사용할 때 값을 어디에 위치시킬지 잘 생각하자
+* 위치 배열을 모두 적용했을 때 flag가 true로 유지된다면 정답을 1 증가시키고, 반복문이 모두 끝나고 나서 정답을 반환했다.
+
