update: change image to text

--- a/_posts/2021-07-20-0719-0725.md
+++ b/_posts/2021-07-20-0719-0725.md
@@ -393,7 +393,9 @@ console.log(counts);
 
 ## 알고리즘
 ### 중복 문자 제거
-![01-01](../../assets/images/algorithm/01/01.png)
+소문자로 된 한개의 문자열이 입력되면 중복된 문자를 제거하고 출력하는 프로그램을 작성하세요.  
+제거된 문자열의 각 문자는 원래 문자열의 순서를 유지합니다.  
+
 
 ```javascript
 function solution(str) {
@@ -410,7 +412,9 @@ console.log(solution('ksekkset'));
 * 주어진 문자열을 단어별로 반복문을 돌려서 빈 문자열에 해당하는 단어가 있는지 확인하여 없으면 해당 단어를 추가하여 결과를 출력했다.
 
 ### 회문 문자열
-![01-02](../../assets/images/algorithm/01/02.png)
+앞에서 읽을 때나 뒤에서 읽을 때나 같은 문자열을 회문 문자열이라고 합니다.  
+문자열이 입력되면 해당 문자열이 회문 문자열이면 "YES", 회문 문자열이 아니면 “NO"를 출력 하는 프로그램을 작성하세요.  
+단 회문을 검사할 때 대소문자를 구분하지 않습니다.
 
 ```javascript
 function solution(str) {
@@ -434,7 +438,8 @@ console.log(solution('gattBG'));
 3. 기존 문자열과 뒤집은 문자열을 비교하여 결과를 반환하였다.
 
 ### 뒤집은 소수
-![01-03](../../assets/images/algorithm/01/03.png)
+N개의 자연수가 입력되면 각 자연수를 뒤집은 후 그 뒤집은 수가 소수이면 그 소수를 출력하는 프로그램을 작성하세요.   
+예를 들어 32를 뒤집으면 23이고, 23은 소수이다. 그러면 23을 출력한다. 단 910를 뒤집으면 19로 숫자화 해야 한다. 첫 자리부터의 연속된 0은 무시한다.
 
 ```javascript
 function solution(array) {
@@ -465,7 +470,7 @@ console.log(solution([32, 55, 62, 20, 250, 370, 200, 30, 100]));
 2. 뒤집은 수가 1이면 소수가 아니기에 return 시켰고, 2부터 자기 자신 수까지 나누어 떨어지는 수가 있으면 소수가 아니기에 return 시켰다. 그 외에는 모두 정답 배열에 push 시켜서 결과를 도출하였다.
 
 ### 괄호문자제거
-![01-04](../../assets/images/algorithm/01/04.png)
+입력된 문자열에서 소괄호 ( ) 사이에 존재하는 모든 문자를 제거하고 남은 문자만 출력하는 프로그램을 작성하세요.  
 
 ```javascript
 function solution(str) {
@@ -491,7 +496,7 @@ console.log(solution('(A(BC)D)EF(G(H)(IJ)K)LM(N)'));
 3. 배열을 `join`함수로 문자열로 변환하여 결과를 출력하였다.
 
 ### 재귀함수를 이용한 이진수 출력
-![01-05](../../assets/images/algorithm/01/05.png)
+10진수 n이 입력되면 2진수로 변환하여 출력하는 프로그램을 작성하세요. 단 재귀함수를 이용 해서 출력해야 합니다.
 
 ```javascript
 function solution(num) {
@@ -770,7 +775,7 @@ const {
 # 9일 차 JS 7 ~ 12회차 강의 정리 및 알고리즘
 ## 알고리즘
 ### 대문자 찾기
-![02-01](../../assets/images/algorithm/02/01.png)
+한 개의 문자열을 입력받아 해당 문자열에 알파벳 대문자가 몇 개 있는지 알아내는 프로그램을 작성하세요.
 
 ```javascript
 function solution(str) {
@@ -790,7 +795,7 @@ console.log(solution('KoreaTimeGood'));
 * 문자열을 조회해서 대문자로 변경한 값과 기존의 값이 동일한지 체크하고, 동일한 수를 세서 반환하였다.
 
 ### 대소문자 변환
-![02-02](../../assets/images/algorithm/02/02.png)
+대문자와 소문자가 같이 존재하는 문자열을 입력받아 대문자는 소문자로 소문자는 대문자로 변환하여 출력하는 프로그램을 작성하세요.
 
 ```javascript
 function solution(str) {
@@ -813,7 +818,10 @@ console.log(solution('gattBG'));
 * 대문자 찾기 문제와 비슷한 방법을 사용해서, 문자가 대문자라면 소문자로 바꾸고 아니라면 소문자이므로 대문자로 변환해서 반환하였다.
 
 ### 가위 바위 보
-![02-03](../../assets/images/algorithm/02/03.png)
+A, B 두 사람이 가위바위보 게임을 합니다. 총 N번의 게임을 하여 A가 이기면 A를 출력하고, B가 이기면 B를 출력합니다. 비길 경우에는 D를 출력합니다.  
+가위, 바위, 보의 정보는 1:가위, 2:바위, 3:보로 정하겠습니다.  
+
+두 사람의 각 회의 가위, 바위, 보 정보가 주어지면 각 회를 누가 이겼는지 출력하는 프로그램을 작성하세요.
 
 ```javascript
 function solution(aNum, bNum) {
@@ -836,7 +844,7 @@ console.log(solution([2,3,3,1,3], [1,1,2,2,3]));
 * 계산한 값을 사용해서 정답 배열에 비기면 D, A가 이기면 A, B가 이기면 B를 push해서 해결하였다.
 
 ### 격자판 최대합
-![02-04](../../assets/images/algorithm/02/04.png)
+N*N의 격자판이 주어지면 각 행의 합, 각 열의 합, 두 대각선의 합 중 가 장 큰 합을 출력합니다.
 
 ```javascript
 function solution(arr) {
@@ -878,7 +886,7 @@ console.log(solution([[10, 13, 10, 12, 15], [12, 39, 30, 23, 11], [11, 25, 50, 5
 * 각 가로, 세로, 대각선의 합을 한 배열에 넣고 그 배열 내에서 최대값을 반환해서 해결했다.
 
 ### 문자열 압축
-![02-05](../../assets/images/algorithm/02/05.png)
+알파벳 대문자로 이루어진 문자열을 입력받아 같은 문자가 연속으로 반복되는 경우 반복되는 문자 바로 오른쪽에 반복 횟수를 표기하는 방법으로 문자열을 압축하는 프로그램을 작성하시오. 단 반복횟수가 1인 경우 생략합니다.  
 
 ```javascript
 function solution(str) {
@@ -913,7 +921,10 @@ console.log(solution('KSHHEAAA'));
 * 정답 배열에 해당 문자의 반복 횟수를 객체에서 꺼내서 삽입하고, 문자열로 다시 변환해서 반환하였다.
 
 ### 멘토링
-![02-06](../../assets/images/algorithm/02/06.png)
+현수네 반 선생님은 반 학생들의 수학점수를 향상시키기 위해 멘토링 시스템을 만들려고 합니다 . 멘토링은 멘토(도와주는 학생)와 멘티(도움을 받는 학생)가 한 짝이 되어 멘토가 멘티의 수학공부를 도와주는 것입니다.  
+선생님은 M번의 수학테스트 등수를 가지고 멘토와 멘티를 정합니다.  
+만약 A학생이 멘토이고, B학생이 멘티가 되는 짝이 되었다면, A학생은 M번의 수학테스트에서 모두 B학생보다 등수가 앞서야 합니다.  
+M번의 수학성적이 주어지면 멘토와 멘티가 되는 짝을 만들 수 있는 경우가 총 몇 가지 인지 출력하는 프로그램을 작성하세요.
 
 ```javascript
 function solution(nums) {
@@ -951,7 +962,22 @@ console.log(solution([[3, 4, 1, 2], [4, 3, 2, 1], [3, 1, 4, 2]]));
 * 멘토랑 멘티가 같은 사람일수는 없기에 그런 경우에는 continue로 바로 다음으로 넘어가게 했다.
 
 ### LRU (카카오 캐시 문제 변형)
-![02-07](../../assets/images/algorithm/02/07.png)
+캐시메모리는 CPU와 주기억장치(DRAM) 사이의 고속의 임시 메모리로서 CPU가 처리할 작업을 저장해 놓았다가 필요할 바로 사용해서 처리속도를 높이는 장치이다.  
+워낙 비싸고 용량이 작아 효율적으로 사용해야 한다. 철수의 컴퓨터는 캐시메모리 사용 규칙이 LRU 알고리즘을 따른다. LRU 알고리즘은 Least Recently Used의 약자로 직역하자면 가장 최근에 사용되지 않은 것 정도의 의미를 가지고 있습니다.   
+캐시에서 작업을 제거할 때 가장 오랫동안 사용하지 않은 것을 제거하겠다는 알고리즘입니다.  
+만약 캐시의 사이즈가 5이고 작업이 2 3 1 6 7 순으로 저장되어있다면, (맨 앞이 가장 최근에 쓰인 작업이고, 맨 뒤는 가장 오랫동안 쓰이지 않은 작업이다.)  
+
+
+
+1) Cache Miss : 해야할 작업이 캐시에 없는 상태로 위 상태에서 만약 새로운 작업인 5번 작업을 CPU가 사용한다면 Cache miss가 되고 모든 작업이 뒤로 밀리고 5번작업은 캐시의 맨
+앞에위치한다. 5 2 3 1 6 (7번작업은캐시에서삭제된다.)  
+
+
+2) Cache Hit : 해야할 작업이 캐시에 있는 상태로 위 상태에서 만약 3번 작업을 CPU가 사용한다면 Cache Hit가 되고, 63번 앞에 있는 5, 2번 작업은 한 칸 뒤로 밀리고, 3번이 맨 앞으로 위치하게 된다. 5 2 3 1 6 ---> 3 5 2 1 6  
+
+
+캐시의 크기가 주어지고, 캐시가 비어있는 상태에서 N개의 작업을 CPU가 차례로 처리한다면 N개의 작업을 처리한 후 캐시메모리의 상태를 가장 최근 사용된 작업부터 차례대로 출력하는 프로그램을 작성하세요.
+
 
 ```javascript
 function solution(nums, s) {
@@ -1134,7 +1160,10 @@ number = 2;
 # 10일 차 알고리즘 문제 풀이
 ## 알고리즘
 ### K번째 큰 수
-![03-01](../../assets/images/algorithm/03/01.png)
+현수는 1부터 100사이의 자연수가 적힌 N장의 카드를 가지고 있습니다. 같은 숫자의 카드가 여러장 있을 수 있습니다.   
+현수는 이 중 3장을 뽑아 각 카드에 적힌 수를 합한 값을 기록하려 고 합니다. 3장을 뽑을 수 있는 모든 경우를 기록합니다.   
+기록한 값 중 K번째로 큰 수를 출력 하는 프로그램을 작성하세요.  
+만약 큰 수부터 만들어진 수가 25 25 23 23 22 20 19......이고 K값이 3이라면 K번째 큰 값 은 22입니다.
 
 ```javascript
 function solution(nums, k) {
@@ -1170,7 +1199,9 @@ console.log(solution([5, 5, 5, 4, 4, 3, 2, 1], 2));
 	* 내림차순: `arr.sort((a, b) => b - a);`
 
 ### 졸업 선물
-![03-02](../../assets/images/algorithm/03/02.png)
+선생님은 올해 졸업하는 반 학생들에게 졸업선물을 주려고 합니다.  
+학생들에게 인터넷 쇼핑몰에서 각자 원하는 상품을 골라 그 상품의 가격과 배송비를 제출하라 고 했습니다. 선생님이 가지고 있는 예산은 한정되어 있습니다.  
+현재 예산으로 최대 몇 명의 학생에게 선물을 사줄 수 있는지 구하는 프로그램을 작성하세요. 선생님은 상품 하나를 50% 할인해서(반 가격) 살 수 있는 쿠폰을 가지고 있습니다. 배송비는 할인에 포함되지 않습니다.
 
 ```javascript
 function solution(nums, m) {
@@ -1209,7 +1240,11 @@ console.log(solution([[8, 6], [2, 2], [4, 3], [4, 5], [12, 1]], 41));
 * 논리적으로만 생각해서 코드를 이렇게 구현했지만 과연 이게 모든 테스트 케이스를 통과할 수 있을까하는 의문이 들었다.
 
 ### 최대 매출
-![03-03](../../assets/images/algorithm/03/03.png)
+현수의 아빠는 제과점을 운영합니다. 현수 아빠는 현수에게 N일 동안의 매출기록을 주고 연속 된 K일 동안의 최대 매출액이 얼마인지 구하라고 했습니다.  
+만약 N=10이고 10일 간의 매출기록이 아래와 같습니다. 이때 K=3이면  
+12 15 11 20 25 10 20 19 13 15  
+연속된 3일간의 최대 매출액은 11+20+25=56만원입니다. 여러분이 현수를 도와주세요.
+
 
 ```javascript
 function solution(nums, k) {
@@ -1234,7 +1269,7 @@ console.log(solution([12, 15, 11, 20, 25, 10, 20, 19, 13, 15], 3));
 * 그리고 최대값을 구할 수 있도록 비교하는 코드를 작성해 결과를 도출했다.
 
 ### 공통원소 구하기
-![03-04](../../assets/images/algorithm/03/04.png)
+A, B 두 개의 집합이 주어지면 두 집합의 공통 원소를 추출하여 오름차순으로 출력하는 프로그램을 작성하세요. 시간복잡도를 고려해야 하는 문제입니다.
 
 ```javascript
 function solution(numA, numB) {
@@ -1256,7 +1291,12 @@ console.log(solution([1, 3, 9, 5, 2], [3, 2, 5, 7, 10]));
 * 하지만 아직 특정 알고리즘까지 학습하지는 않아서 어떤 것을 적용해야 할지는 모르겠다. 아직은 사전 과제이기 때문에 일단은 이렇게 해결하고 알고리즘을 학습한 뒤, 그 알고리즘을 적용하여 시간복잡도를 만족시켜야겠다.
 
 ### 연속 부분수열
-![03-05](../../assets/images/algorithm/03/05.png)
+N개의 수로 이루어진 수열이 주어집니다.  
+이 수열에서 연속부분수열의 합이 특정숫자 M이 되는 경우가 몇 번 있는지 구하는 프로그램을 작성하세요.  
+만약 N=8, M=6이고 수열이 다음과 같다면  
+12131112  
+합이 6이 되는 연속부분수열은 {2, 1, 3}, {1, 3, 1, 1}, {3, 1, 1, 1}로 총 3가지입니다. 시간복잡도를 고려해야 하는 문제입니다.
+
 
 ```javascript
 function solution(nums, m) {
@@ -1290,7 +1330,8 @@ console.log(solution([1, 2, 1, 3, 1, 1, 1, 2], 6));
 * 그리고 순차적으로 값을 더해서 값이 특정 숫자의 값을 넘어가면 바로 반복문을 종료시키고  다음 인덱스로 넘어가게 구현해서 쓸데없이 반복이 되지 않도록 구현했다.
 
 ### 올바른 괄호
-![03-06](../../assets/images/algorithm/03/06.png)
+괄호가 입력되면 올바른 괄호이면 “YES", 올바르지 않으면 ”NO"를 출력합니다.  
+(())() 이것은 괄호의 쌍이 올바르게 위치하는 거지만, (()()))은 올바른 괄호가 아니다.
 
 ```javascript
 function solution(s) {
@@ -1313,7 +1354,18 @@ console.log(solution('(()(()))(()'));
 * 문자열을 반복문으로 돌면서 각 문자를 체크해서 괄호 개수를 세고, 양 개수가 같다면 YES 아니라면 NO를 반환하였다.
 
 ### 공주구하기
-![03-07](../../assets/images/algorithm/03/07.png)
+정보 왕국의 이웃 나라 외동딸 공주가 숲속의 괴물에게 잡혀갔습니다.  
+정보 왕국에는 왕자가 N명이 있는데 서로 공주를 구하러 가겠다고 합니다. 정보왕국의 왕은 다음과 같은 방법으로 공주를 구하러 갈 왕자를 결정하기로 했습니다.  
+왕은 왕자들을 나이 순으로 1번부터 N번까지 차례로 번호를 매긴다.   
+그리고 1번 왕자부터 N 번 왕자까지 순서대로 시계 방향으로 돌아가며 동그랗게 앉게 한다. 그리고 1번 왕자부터 시 계방향으로 돌아가며 1부터 시작하여 번호를 외치게 한다.   
+한 왕자가 K(특정숫자)를 외치면 그 왕자는 공주를 구하러 가는데서 제외되고 원 밖으로 나오게 된다. 그리고 다음 왕자부터 다시 1부터 시작하여 번호를 외친다.  
+이렇게 해서 마지막까지 남은 왕자가 공주를 구하러 갈 수 있다. 
+
+
+
+예를 들어 총 8명의 왕자가 있고, 3을 외친 왕자가 제외된다고 하자. 처음에는 3번 왕자가 3 을 외쳐 제외된다.   
+이어 6, 1, 5, 2, 8, 4번 왕자가 차례대로 제외되고 마지막까지 남게 된 7번 왕자에게 공주를 구하러갑니다.  
+N과 K가 주어질 때 공주를 구하러 갈 왕자의 번호를 출력하는 프로그램을 작성하시오.
 
 ```javascript
 function solution(n, k) {
