--- a/_posts/2021-07-28-0726-0801.md
+++ b/_posts/2021-07-28-0726-0801.md
@@ -19,7 +19,10 @@ category: TIL
 
 ## 알고리즘
 ### 숫자통일
-![04-01](../../assets/images/algorithm/04/01.png)
+0과 1로 구성된 문자열이 주어지면 현수는 연속된 1이상의 구간을 뒤집어 전체를 하나의 숫자로 통일하려고 합니다.  
+여기서 뒤집는다는 0을 1로 또는 1을 0으로 바꾸는 것을 의미합니다.   
+만약 문자열이 100001111이 주어지면 현수는 2번째부터 5번째까지는 뒤집어 111111111로 통일할 수 있습니다.   
+문자열이 주어지면 현수가 최소 몇 번만에 숫자을 통일할 수 있는지 찾아주세요. 
 
 ```javascript
 function solution (s) {
@@ -52,7 +55,15 @@ console.log(solution('10010111100'));
 
 ---
 ### 상태변화
-![04-02](../../assets/images/algorithm/04/02.png)
+0과 1로 구성된 문자열이 주어지면 현수는 자신이 목표한 상태로 바꾸려고 합니다. 현수가 목표한 상태로 바꾸기 위해 할 수 있는 동작은 2가지입니다. 
+
+
+1. 문자열에서 임의로 0과 1 두 개를 선택해 서로 위치를 교환한다.  
+2. 문자열에서 임의로 0또는 1 한 개를 선택해 뒤집는다. 여기서 뒤집는다는 것은 0은 1로 1 은 0으로 바꾸는 것을 의미합니다.   
+
+
+만약 초기상태가 11000111문자열이 주어지고, 목표상태가 11100110인 문자열이 주어지면 초기상태의 3번째 0과 8번째 1을 서로 위치 교환하면 1번만에 목표상태가 됩니다.  
+문자열의 초기상태와 목표상태가 주어지면 현수가 목표상태를 이루는데 최소횟수를 구하는 프로그램을 작성하세요.
 
 ```javascript
 function solution(s1, s2) {
@@ -79,7 +90,7 @@ console.log(solution("11000111", "11111110"));
 
 ---
 ### 접미사 정렬
-![04-03](../../assets/images/algorithm/04/03.png)
+문자열 s가 주어지면 s문자열의 모든 접미사를 구하고 사전순으로 출력하는 프로그램을 작성하세요.
 
 ```javascript
 function solution(s) {
@@ -104,7 +115,8 @@ console.log(solution('kseaedu'));
 
 ---
 ### 공통문자가 없는 단어
-![04-04](../../assets/images/algorithm/04/04.png)
+N개의 문자열이 주어지면 서로 공통문자가 없는 두 문자열을 선택해 두 문자열의 길이를 곱했 을 때 최댓값을 출력하는 프로그램을 작성하세요.
+
 
 ```javascript
 function isUnique(short, long) {
@@ -139,7 +151,7 @@ console.log(solution(["kk", "k", "kkk", "kkkkk", "kkkk"]));
 
 ---
 ### 회문문자열 2
-![04-05](../../assets/images/algorithm/04/05.png)
+문자열 s가 주어지면 s가 최대 문자 1개까지 지워서 회문문자열이 되면 “YES"를 출력하고, 그렇지 않으면 ”NO"를 출력하는 프로그램을 작성하세요.
 
 ```javascript
 function solution(s) {
@@ -174,7 +186,9 @@ console.log(solution('abcacbakcba'));
 
 ---
 ### 학급 회장
-![04-06](../../assets/images/algorithm/04/06.png)
+학급 회장을 뽑는데 후보로 기호 A, B, C, D, E 후보가 등록을 했습니다.  
+투표용지에는 반 학생들이 자기가 선택한 후보의 기호(알파벳)가 쓰여져 있으며 선생님은 그 기호를 발표하고 있습니다.  
+선생님의 발표가 끝난 후 어떤 기호의 후보가 학급 회장이 되었는지 출력하는 프로그램을 작성하세요. 반드시 한 명의 학급회장이 선출되도록 투표결과가 나왔다고 가정합니다.
 
 ```javascript
 function solution(s) {
@@ -216,7 +230,9 @@ console.log(solution('BACBACCACCBDEDE'));
 
 ---
 ### 아나그램
-![04-07](../../assets/images/algorithm/04/07.png)
+Anagram이란 두 문자열이 알파벳의 나열 순서를 다르지만 그 구성이 일치하면 두 단어는 아나그램이라고 합니다.  
+예를 들면 AbaAeCe 와 baeeACA 는 알파벳을 나열 순서는 다르지만 그 구성을 살펴보면 A(2), a(1), b(1), C(1), e(2)로 알파벳과 그 개수가 모두 일치합니다. 즉 어느 한 단어를 재배열하면 상대편 단어가 될 수 있는 것을 아나그램이라 합니다.  
+길이가 같은 두 개의 단어가 주어지면 두 단어가 아나그램인지 판별하는 프로그램을 작성하세요. 아나그램 판별시 대소문자가 구분됩니다.
 
 ```javascript
 function solution(s1, s2) {
@@ -249,7 +265,7 @@ console.log(solution('abaCC', 'Caaab'));
 
 ---
 ### 문자열 구분하기
-![04-08](../../assets/images/algorithm/04/08.png)
+N개의 문자열이 주어지면 모든 문자열을 구분할 수 있는 최소길이 접두어를 찾는 프로그램을 작성하세요.
 
 ```javascript
 function solution(words) {
@@ -288,7 +304,10 @@ console.log(solution(["longlong", "longtong", "longbig"]));
 # 12일 차 자료구조 / 알고리즘
 ## 알고리즘
 ### 수열 축소
-![05-01](../../assets/images/algorithm/05/01.png)
+길이가 N인 수열이 주어지면 인접한 두 수의 차이를 이용해 길이가 N-1인 수열을 만듭니다.   
+만약 수열이 [5, 3, 7, 9, -2]라면 [(3-5), (7-3), (9-7), (-2-9)] => [-2, 4, 2, -11]로 수열의 길이를 줄일 수 있습니다. 이런 과정을 길이축소작업이라 하겠습니다.  
+N길이의 수열이 주어지면 M번의 길이축소작업을 한 결과를 구하는 프로그램을 작성하세요.
+
 
 ```javascript
 function solution(nums, m) {
@@ -314,7 +333,10 @@ console.log(solution([5, 3, 7, 9, -2], 2));
 
 ---
 ### 가장 높은 증가수열
-![05-02](../../assets/images/algorithm/05/02.png)
+길이가 N인 수열이 주어지면 이 수열에서 연속된 부분 증가수열을 찾습니다.   
+각 부분증가수열은 높이가 있습니다. 증가수열의 높이란 증가수열의 첫항과 마지막항의 차를 의미합니다.   
+수열이 주어지면 여러 증가수열 중 가장 높은 부분증가수열을 찾는 프로그램을 작성하세요.   
+만약 수열이 [5, 2, 4, 7, 7, 3, 9, 10, 11]이 주어지면 가장 높은 부분증가수열은 [3, 9, 10, 11]이고, 높이는 8입니다.
 
 ```javascript
 function solution(nums) {
@@ -343,7 +365,9 @@ console.log(solution([8, 12, 2, 3, 7, 6, 20, 3]));
 
 ---
 ### 가장 긴 수열
-![05-03](../../assets/images/algorithm/05/03.png)
+길이가 N인 수열이 주어지면 이 수열에서 연속으로 증가하거나, 또는 연속으로 작아지는 부분 수열 중 가장 길이가 긴 수열을 찾는 프로그램을 작성하세요.  
+만약 [5, 3, 6, 7, 9, 8, 5, 3, 1, 2]이 주어지면 우리가 찾는 가장 긴 수열은 [9, 8, 5, 3, 1] 입니다.  
+수열 [1, 2, 3, 3, 4, 5, 6]과 같이 같은 값이 연속으로 있는 것은 증가 또는 감소로 보지 않기 때문에 가장 긴 수열은 [3, 4, 5, 6]이 됩니다.
 * 매개변수 형식 2는 답이 잘못되었다. 8 -> 4
 
 ```javascript
@@ -391,7 +415,9 @@ console.log(solution([1, 2, 3, 3, 4, 5, 6, 7, 7]));
 
 ---
 ### 바이토닉 수열
-![05-04](../../assets/images/algorithm/05/04.png)
+바이토닉 수열이란 수열이 증가했다가 감소하는 수열을 의미합니다.  
+길이가 N인 수열이 주어지면 이 수열이 바이토닉 수열인지 판별하는 프로그램을 작성하세요. 만약 [1, 2, 3, 4, 2, 1]이면 바이토닉 수열입니다.   하지만 [1, 2, 2, 3, 2, 1]과 같이 같은 값이 연속으로 있으면 바아토닉이 수열이라 하지 않습니다.
+
 
 ```javascript
 function solution(nums) {
@@ -430,7 +456,8 @@ console.log(solution([1, 2, 3, 4, 5]));
 
 ---
 ### 거리 두기
-![05-05](../../assets/images/algorithm/05/05.png)
+현수는 영화관에 도착했습니다. 영화상영 시간보다 약간 늦은 현수는 남은 좌석을 빨리 선택하고 영화를 보려고 합니다.  
+현수에게 일렬로된 좌석정보가 주어지면, 이미 앉아 있는 사람들 중 가장 가까운 사람과 최대한 멀리 떨어져 앉을 자석을 선택해야 합니다. 여러분이 도와주세요.
 
 ```javascript
 function solution(nums) {
@@ -479,7 +506,8 @@ console.log(solution([1,0,0,0,1,0,0,1,0,1]));
 
 ---
 ### 2차원 배열 1의 개수
-![05-06](../../assets/images/algorithm/05/06.png)
+0과 1로 구성된 2차원 배열이 주어지면 각 행의 1이 개수를 세어 개수가 가장 작은 행번호부터 출력하는 프로그램을 작성하세요.   
+1의 개수가 같은 행은 여러개이면 행번호가 작은 것부터 출력합니다. 이차원배열의 행크기가 N이면 행번호는 0번부터 N-1번까지입니다.
 
 ```javascript
 function solution(nums) {
@@ -501,7 +529,9 @@ console.log(solution([[1, 0, 0, 1], [0, 0, 0, 1], [1, 1, 0, 1], [0, 1, 0, 1]]));
 
 ---
 ### 행과 열의 최솟값
-![05-07](../../assets/images/algorithm/05/07.png)
+자연수로 채워져 있는 2차원 배열이 주어지면 행과열의 최솟값들을 구하는 프로그램을 작성하세요.   
+행과열의 최솟값이란 2차원 배열의 숫자가 자신이 속한 행과 자신이 속한 열에서 모두 가장 작은 숫자를 의미합니다.  
+2차원 배열에 존재하는 모든 행과열의 최솟값들을 찾아주는 프로그램을 작성하세요.
 ```javascript
 function solution(nums) {
     let answer = [];
@@ -540,7 +570,10 @@ console.log(solution([[4, 6, 22, 1], [9, 3, 10, 12], [30, 7, 20, 2], [15, 8, 5, 
 
 ---
 ### 봉우리
-![05-08](../../assets/images/algorithm/05/08.png)
+지도 정보가 N*N 격자판에 주어집니다. 각 격자에는 그 지역의 높이가 쓰여있습니다.   
+각 격자판의 숫자 중 자신의 상하좌우 숫자보다 큰 숫자는 봉우리 지역입니다. 봉우리 지역이 몇 개 있는 지 알아내는 프로그램을 작성하세요.  
+격자의 가장자리는 0으로 초기화 되었다고 가정한다.  
+만약 N=5 이고, 격자판의 숫자가 다음과 같다면 봉우리의 개수는 10개입니다.
 
 
 ```javascript
