--- a/_posts/2021-07-28-0726-0801.md
+++ b/_posts/2021-07-28-0726-0801.md
@@ -617,3 +617,282 @@ console.log(solution([[5, 3, 7, 2, 3], [3, 7, 1, 6, 1], [7, 2, 5, 3, 4], [4, 3, 
 	* `&&`를 사용할 때 값을 어디에 위치시킬지 잘 생각하자
 * 위치 배열을 모두 적용했을 때 flag가 true로 유지된다면 정답을 1 증가시키고, 반복문이 모두 끝나고 나서 정답을 반환했다.
 
+## 0728
+# 13일 차 자료구조 / 알고리즘
+## 알고리즘
+
+### 올바른 괄호
+괄호가 입력되면 올바른 괄호이면 “YES", 올바르지 않으면 ”NO"를 출력합니다.  
+(())() 이것은 괄호의 쌍이 올바르게 위치하는 거지만, (()()))은 올바른 괄호가 아니다. 
+
+```javascript
+function solution(s) {
+    let answer = "YES";
+    let stack = [];
+
+    for (let i = 0; i < s.length; i++) {
+        if (s[i] === '(') {
+            stack.push(s[i]);
+        } else {
+            if (stack.length === 0) return "NO";
+            stack.pop();
+        }
+    }
+
+    if (stack.length > 0) answer = 'NO';
+
+    return answer;
+}
+
+console.log(solution('(()(()))(()'));
+console.log(solution('(())()'));
+console.log(solution('(()()))'));
+```
+* 배열을 하나 만들고, 여는 괄호를 만나면 배열에 push한다.
+* 닫는 괄호를 만나면 pop 시킨다. 닫는 괄호를 만났는데 스택이 비어있으면 올바른 괄호가 아니므로 return "NO"
+* 다 돌았는데 스택이 남아있으면 answer를 NO로 한다.
+* 괄호가 문제에 나오면 바로 스택을 떠올리자!
+
+#### 스택
+* 자료가 들어가는 곳과 나오는 곳이 같은 자료구조
+* Last In First Out
+* 자바스크립트에서 큐와 스택, 덱은 지원
+* 자바스크립트는 힙 구조가 없어서 구현해야 한다.
+
+### 괄호문자 제거
+입력된 문자열에서 소괄호 ( ) 사이에 존재하는 모든 문자를 제거하고 남은 문자만 출력하는 프로그램을 작성하세요. 
+
+```javascript
+function solution(s) {
+    let answer;
+    let stack = [];
+
+    for (let i = 0; i < s.length; i++) {
+        if (s[i] === ')') {
+            while (stack.pop() !== '(');
+        } else {
+            stack.push(s[i]);
+        }
+    }
+
+    answer = stack.join('');
+    return answer;
+}
+
+
+console.log(solution("(A(BC)D)EF(G(H)(IJ)K)LM(N)"));
+```
+* 여는 괄호거나 숫자면 push
+* 닫는 괄호를 만나면, pop 결과가 여는 괄호가 나올 때까지 반복
+
+### 후위식 연산
+후위연산식이 주어지면 연산한 결과를 출력하는 프로그램을 작성하세요.  
+만약 3*(5+2)-9 을 후위연산식으로 표현하면 352+*9- 로 표현되며 그 결과는 12입니다. 
+
+```javascript
+function solution(s) {
+    let answer;
+    let stack = [];
+
+    for (x of s) {
+        if (!isNaN(x)) {
+            stack.push(Number(x));
+        } else {
+            let rt = stack.pop();
+            let lt = stack.pop();
+            if(x==='+') stack.push(lt+rt);
+            else if(x==='-') stack.push(lt-rt);
+            else if(x==='*') stack.push(lt*rt);
+            else if(x==='/') stack.push(lt/rt);
+        }
+        console.log(stack);
+    }
+    answer = stack[0];
+
+    return answer;
+}
+```
+* 후위식을 값을 구하는 프로세스는 다음과 같다.
+	1. 요소가 숫자면 스택에 push한다.
+	2. 요소가 연산자면 연산을 진행하는데, 스택에서 pop을 두 번 해서 처음 나오는 것을 오른쪽에, 나중에 나오는 것을 왼쪽에 두고 연산을 한다.
+	3. 연산 결과를 스택에 push한다.
+	4. 이 과정을 식이 끝날 때까지 반복하면 스택에 남아있는 하나의 요소가 식의 결과가 된다.
+* `isNaN(x)`는 x가 숫자이면 false, 숫자가 아니면 true를 반환하는 함수이다.
+
+
+#### 전위, 중위, 후위
+* 이진트리는 부모, 왼쪽 자식, 오른쪽 자식이 기본 구조
+* 전위 순회는 방문하는 순서가 부모 -> 왼쪽 자식 -> 오른쪽 자식
+* 중위 순회는 방문하는 순서가 왼쪽 자식 -> 부모 -> 오른쪽 자식
+* 후위 순회는 방문하는 순서가 왼쪽 자식 -> 오른쪽 자식 -> 부모
+* 예를 들어, 1, 2, 3, 4, 5, 6, 7이 이진트리로 구성되어 있다면,
+	* 전위 : 1, 2, 4, 5, 3, 6, 7
+	* 중위 : 4, 2, 5, 1, 6, 3, 7
+	* 후위 : 4, 5, 2, 6, 7, 3, 1
+
+#### 중위식을 후위식으로 바꾸는 법
+* 맨 나중에 연산되는 연산자를 찾는다.
+* 해당 연산자를 루트노드로, 연산자를 기준으로 왼쪽 값은 왼쪽 자식 노드로, 오른쪽 값은 오른쪽 자식 노드로 보내서 이 행위를 반복한다.
+* 중위식을 이진트리화 시킨다.
+* 이진트리를 후위식으로 바꾼다.
+
+### 연속된 문자 지우기
+문자열 s가 주어지면 이웃한 두 개의 문자가 같으면 두 문자를 제거합니다.  
+이 과정을 반복해 서 최종적으로 남는 문자만으로 이루어진 문자열을 출력하는 프로그램을 작성하세요.  
+만약 "acbbcaa"라는 문자열이 주어진다면 최초 bb가 연속되어 있어 제거하고 나면 “accaa"가 되고, 다시 cc가 연속되어 제거하면 ”aaa"가 되고 “aa"연속되어 제거하면 ”a"가 최종적으로 남습니다. 
+
+```javascript
+function solution(s) {
+    let answer;
+    let stack = [];
+
+    for(x of s) {
+        if (stack.length === 0 || stack[stack.length - 1] !== x) {
+            stack.push(x);
+        } else {
+            stack.pop();
+        }
+    }
+
+    answer = stack.join('');
+
+    return answer;
+}
+```
+* 스택이 비었을 때는 그냥 push한다.
+* 스택의 최상단과 비교해서 값이 다르면 push한다.
+* 값이 같으면 pop한다.
+* 반복문을 마치면 스택을 문자열로 바꿔서 출력한다.
+
+
+### 공주 구하기
+정보 왕국의 이웃 나라 외동딸 공주가 숲속의 괴물에게 잡혀갔습니다.    
+정보 왕국에는 왕자가 N명이 있는데 서로 공주를 구하러 가겠다고 합니다. 정보왕국의 왕은 다음과 같은 방법으로 공주를 구하러 갈 왕자를 결정하기로 했습니다.    
+왕은 왕자들을 나이 순으로 1번부터 N번까지 차례로 번호를 매긴다. 그리고 1번 왕자부터 N 번 왕자까지 순서대로 시계 방향으로 돌아가며 동그랗게 앉게 한다.   
+그리고 1번 왕자부터 시 계방향으로 돌아가며 1부터 시작하여 번호를 외치게 한다.   
+한 왕자가 K(특정숫자)를 외치면 그 왕자는 공주를 구하러 가는데서 제외되고 원 밖으로 나오게 된다.   
+그리고 다음 왕자부터 다시 1부터 시작하여 번호를 외친다.  
+이렇게 해서 마지막까지 남은 왕자가 공주를 구하러 갈 수 있다. 
+
+
+예를 들어 총 8명의 왕자가 있고, 3을 외친 왕자가 제외된다고 하자. 처음에는 3번 왕자가 3 을 외쳐 제외된다. 이어 6, 1, 5, 2, 8, 4번 왕자가 차례대로 제외되고 마지막까지 남게 된 7 번 왕자에게 공주를 구하러갑니다.  
+N과 K가 주어질 때 공주를 구하러 갈 왕자의 번호를 출력하는 프로그램을 작성하시오. 
+
+
+```javascript
+function solution(n, k) {
+    let answer;
+    let queue = Array.from({length:n}, (v, i) => i+1);
+
+    while(queue.length > 1) {
+        for (i = 1; i < k; i++) {
+            let tmp = queue.shift();
+            queue.push(tmp);
+        }
+        queue.shift();
+    }
+
+    answer = queue.join('');
+
+    return answer;
+}
+
+console.log(solution(8, 3));
+```
+* queue를 활용하는 문제이다.
+* 우선 queue를 `Array.from` 문법을 사용해서 초기화한다.
+* queue의 길이가 1보다 클 때까지, k - 1번만큼 반복문을 앞에서 빼서, 뒤로 넣는다. 
+* 그리고 맨 앞에서 뺀걸 버리고, 이 행위를 while문 조건이 만족하지 않을 때까지 반복한다.
+
+#### Array.from
+* 첫번째 매개변수로 `{length: 원하는길이}` 객체를, 두번째 매개변수로 원하는 값을 반환하는 콜백함수를 넘겨준다.
+* 콜백함수에서는 첫번째 매개변수를 넘겨줘야, 두번째 매개변수로 인덱스를 불러올 수 있다.
+
+### 교육과정 설계
+현수는 1년 과정의 수업계획을 짜야 합니다.  
+수업중에는 필수과목이 있습니다. 이 필수과목은 반드시 이수해야 하며, 그 순서도 정해져 있습니다.  
+만약 총 과목이 A, B, C, D, E, F, G가 있고, 여기서 필수과목이 CBA로 주어지면 필수과목은 C, B, A과목이며 이 순서대로 꼭 수업계획을 짜야 합니다.  
+여기서 순서란 B과목은 C과목을 이수한 후에 들어야 하고, A과목은 C와 B를 이수한 후에 들어야 한다는 것입니다.  
+현수가 C, B, D, A, G, E로 수업계획을 짜면 제대로 된 설계이지만  
+C, G, E, A, D, B 순서로 짰다면 잘 못 설계된 수업계획이 됩니다.  
+수업계획은 그 순서대로 앞에 수업이 이수되면 다음 수업을 시작하다는 것으로 해석합니다. 수업계획서상의 각 과목은 무조건 이수된다고 가정합니다.
+필수과목순서가 주어지면 현수가 짠 N개의 수업설계가 잘된 것이면 “YES", 잘못된 것이면 ”NO“를 출력하는 프로그램을 작성하세요. 
+
+```javascript
+function solution(need, plan) {
+    let answer;
+    let queue = need.split('');
+
+    for (let x of plan) {
+        if(queue.includes(x)) {
+            if(x!=queue.shift()) return "NO";
+        }
+    }
+
+    answer = queue.length === 0 ? 'YES' : 'NO';
+
+    return answer;
+}
+
+console.log(solution('CBA', 'CBDAGE'));
+console.log(solution('CBA', 'CBDBAGE'));
+```
+* 문제를 제대로 읽지 않고 코드를 짰다가 낭패를 본 문제이다.
+* 필수 과목만 순서대로 들어가면 된다고 생각해서 코드를 구현했는데, 선행되는 필수과목을 듣기 전까지는 그 뒤의 필수과목을 들어서는 안된다는 점을 간과했다.
+* 이를 해결하기 위해서는 수업계획상의 요소가 필수과목 배열에 있는지를 확인해서, 있다면 맨 앞에 것을 꺼내서 비교한 결과가 같지 않다면 바로 return NO를 해버리고, 이를 끝까지 반복하고 큐에 과목이 남아있다면 NO를 반환하도록 한다.
+
+### 최소 매출
+현수의 아빠는 제과점을 운영합니다. 현수아빠는 현수에게 N일 동안의 매출기록을 주고 연속 된 K일 동안의 최소 매출액을 차례로 구하라고 했습니다.  
+만약 N=10이고 10일 간의 매출기록이 아래와 같습니다. 이때 K=3이면  
+11 12 15 20 25 10 20 13 15 19   
+연속된 3일간의 매출액을 차례로 구해보면 [11, 12, 15] 중에서 11, [12, 15, 20] 중에서 12, [15, 20, 25] 중에서 15와 같이 계속 구하면 결과는 [11, 12, 15, 10, 10, 10, 13, 13]입니다.
+
+```javascript
+function solution(nums, k) {
+    let answer = [];
+    let deque = [];
+
+    for (let i = 0; i < k - 1; i++) {
+        while (deque.length > 0 && deque[deque.length - 1][0] > nums[i] ) {
+            deque.pop();
+        }
+        deque.push([nums[i], i]);
+    }
+
+    for (let i = k - 1; i < nums.length; i++) {
+        while (deque.length > 0 && deque[deque.length - 1][0] > nums[i] ) {
+            deque.pop();
+        } 
+        deque.push([nums[i], i]);
+        answer.push(deque[0][0]);
+        if (deque[0][1] === i - k + 1) deque.shift();
+    }
+
+    return answer;
+}
+
+
+console.log(solution([11, 12, 15, 20, 25, 10, 20, 13, 15, 19], 3));
+```
+* deque를 활용해서 문제를 해결해야 했다.
+* for문을 두 번으로 나눠서 문제를 해결하는데, 첫 번째 for문에는 k - 1개까지의 deque를 만들어두고, deque가 k개가 될 때부터의 로직을 두 번째 for문에 작성했다.
+* 첫 번째 for문에서는 deque가 비어있지 않으면서, 새로 들어온 요소가 deque 맨 뒤에 있는 요소보다 작은 경우에는 계속 pop()을 시켜주고, 새로 들어온 요소는 push했다.
+* 그러면 deque 맨 앞의 값은 항상 최솟값으로 유지된다.
+* index를 사용해서 값을 deque에서 빼줘야 할 지 계산하는 로직을 뒤에 작성해야 하므로, push할 때 인덱스를 포함하여 배열 형태로 push했다.
+* 두 번째 for문에서는 k - 1부터 시작해서 반복문을 돌린다.
+* deque의 길이가 0보다 크면서 새로 들어온 요소가 deque의 맨 뒤에 있는 요소보다 작은 경우에는 계속 pop()을 시켜주고, 새로 들어온 요소는 push했다.
+* 그러면 deque 맨 앞의 값은 최솟값이므로, 맨 앞의 값을 answer로 push했다.
+* 결과값에는 3개씩 그룹을 지어서 그 중 가장 작은 값만 출력해줘야하므로, deque의 인덱스가 i - k + 1이 되면 shift()로 해당 요소를 빼주어서 최종 결과를 출력했다.
+
+### 재귀 함수
+* 재귀함수는 스택 프레임을 이용한다.
+* 스택 프레임 최상단에 있다는 뜻은 현재 작동중이다라는 뜻이다.
+* 스택이용 -> 백트래킹의 기본
+* 재귀, dfs 사용할 때는 무조건 if else 사용할 것
+	* if문에는 끝날 조건을 지정한다.
+	* else문에는 그 외에 동작을 구현한다.
+
+#### 스택 프레임 주 정보
+1. 매개변수 정보
+2. 지역변수 정보
+3. 복귀 주소
