--- a/_posts/2021-07-28-0726-0801.md
+++ b/_posts/2021-07-28-0726-0801.md
@@ -226,7 +226,7 @@ console.log(solution('BACBACCACCBDEDE'));
 * `sh.get(키)`: 키로 값을 조회해서 반환
 * `sh.delete(키)`: 키로 값을 조회해서 삭제
 * `sh.has(키)`: 키로 값을 조회해서 값을 가졌다면 true, 없다면 false 반환
-* `sh.size()`: 맵에 존재하는 키 개수 반환
+* `sh.size`: 맵에 존재하는 키 개수 반환
 
 ---
 ### 아나그램
@@ -896,3 +896,265 @@ console.log(solution([11, 12, 15, 20, 25, 10, 20, 13, 15, 19], 3));
 1. 매개변수 정보
 2. 지역변수 정보
 3. 복귀 주소
+
+
+## 0729
+# 14일 차 슬라이딩 윈도우, two pointers Algorithm
+## 최대 매출
+현수의 아빠는 제과점을 운영합니다. 현수아빠는 현수에게 N일 동안의 매출기록을 주고 연속 된 K일 동안의 매출액의 합 중에서 최대값이 얼마인지 구하라고 했습니다.  
+만약 N=10이고 10일 간의 매출기록이 아래와 같습니다. 이때 K=3이면  
+12 15 11 20 25 10 20 19 13 15   
+연속된 3일간의 최대 매출액은 11+20+25=56만원입니다. 여러분이 현수를 도와주세요. 
+
+
+```javascript
+function solution(nums, k) {
+    let answer = 0;
+    let n = nums.length;
+    let sum = 0;
+
+    for (let i = 0; i < k; i++) {
+        sum += nums[i];
+    }
+    answer = sum;
+
+    for (let i = k; i < n; i++) {
+        sum += (nums[i] - nums[i - k]);
+        answer = Math.max(sum, answer);
+    }
+
+    return answer;
+}
+```
+* 슬라이딩 윈도우 기법을 사용해서 문제를 해결한다.
+* 예를 들어, 이 문제에서 연속된 K일이라는 말이 나왔으니 K개를 창이라 생각하고 옆으로 밀고 가면서 값을 구한다.
+	* 연속된..과 개수가 지정된 경우가 있으면 이 기법을 떠올려보자.
+* sum에는 윈도우의 값들의 합을 누적한다.
+* 한 칸 이동할 때마다 새로운 요소는 더해주고 창에 있던 맨 앞 요소는 빼준다.
+
+## 매출액의 종류
+현수의 아빠는 제과점을 운영합니다. 현수아빠는 현수에게 N일 동안의 매출기록을 주고 연속된 K일 동안의 매출액의 종류를 각 구간별로 구하라고 했습니다.   
+만약 N=7이고 7일 간의 매출기록이  
+20 12 20 10 23 17 10  
+각 연속 4일간의 구간의 매출종류는   
+첫 번째 구간은 [20, 12, 20, 10]는 매출액의 종류가 20, 12, 10으로 3이다.  
+두 번째 구간은 [12, 20, 10, 23]는 매출액의 종류가 4이다.  
+세 번째 구간은 [20, 10, 23, 17]는 매출액의 종류가 4이다.  
+네 번째 구간은 [10, 23, 17, 10]는 매출액의 종류가 3이다.  
+N일간의 매출기록과 연속구간의 길이 K가 주어지면 첫 번째 구간부터 각 구간별 매출액의 종류를 출력하는 프로그램을 작성하세요. 
+
+```javascript
+function solution (nums, k) {
+    let answer = [];
+    let sh = new Map();
+
+    for (let i = 0; i < k - 1; i++) {
+        sh.set(nums[i], sh.get(nums[i]) + 1 || 1)
+    }
+
+    let lt = 0;
+
+    for (let rt = k - 1; rt < nums.length; rt++) {
+        sh.set(nums[rt], sh.get(nums[rt]) + 1 || 1);
+        answer.push(sh.size);
+        sh.set(nums[lt], sh.get(nums[lt]) - 1);
+        if (sh.get(nums[lt]) === 0) sh.delete(nums[lt]);
+        lt++;
+    }
+
+    return answer;
+}
+```
+* 슬라이딩 윈도우 기법을 사용할 때, 먼저 기본 창을 세팅해놓고 시작하는 것을 기억하자
+* 종류를 구해야 하니, map을 사용해서 풀면 좋다.
+* 값이 0일 때는, 삭제를 해줘야 종류의 개수를 구할 때 포함되지 않는다.
+* lt를 변수로 선언해서 삭제해야 하는 값의 인덱스를 편하게 지정했다.
+
+## 연속 부분수열 1
+N개의 수로 이루어진 수열이 주어집니다.  
+이 수열에서 연속부분수열의 합이 특정숫자 M이 되는 경우가 몇 번 있는지 구하는 프로그램을 작성하세요.  
+만약 N=8, M=6이고 수열이 다음과 같다면  
+12131112  
+합이 6이 되는 연속부분수열은 {2, 1, 3}, {1, 3, 1, 1}, {3, 1, 1, 1}로 총 3가지입니다. 
+
+```javascript
+function solution(nums, m) {
+    let answer = 0;
+    let lt = 0;
+    let sum = 0;
+
+    for (let rt = 0; rt < nums.length; rt++) {
+        sum += nums[rt];
+        
+        while (sum > m) {
+            sum -= nums[lt++];
+        }
+        
+        if (sum === m) {
+            answer++;
+        }
+    }
+
+    return answer;
+}
+```
+* lt는 0으로 초기화하고, rt는 for문에서의 인덱스로 증가시키며 반복문을 구성한다.
+* for문 안에서는  값이 목표 값인지를 확인한다. 목표 값이면 answer를 증가시킨다.
+* sum이 목표 값보다 커지면 lt가 쫒아오면서 lt에 있는 값을 sum에서 빼 준다.
+* lt가 빼도 목표 값보다 큰 경우가 있을 수 있기 때문에, while문으로 처리해야 한다.
+
+
+## 연속 부분수열 2
+N개의 수로 이루어진 수열이 주어집니다.  
+이 수열에서 연속부분수열의 합이 특정숫자 M이 되는 경우가 몇 번 있는지 구하는 프로그램을 작성하세요.  
+만약 주어진 수열이 [1, 2, 3, -3, 1, 2]이고, M값이 3이라면  
+합이 3이 되는 연속부분수열은 [1, 2], [1, 2, 3, -3], [2, 3, -3, 1], [3], [3, -3, 1, 2], [1, 2]로 총 6가지입니다. 
+
+```javascript
+function solution(nums, m) {
+    let answer = 0;
+    let sum = 0;
+    let nH = new Map();
+
+    for (let i = 0; i < nums.length; i++) {
+        sum += nums[i];
+        if(sum === m) answer++;
+        if (nH.has(sum - m)) answer += nH.get(sum - m);
+
+        nH.set(sum, nH.get(sum) + 1 || 1);
+    }
+
+    return answer;
+}
+```
+* 코딩테스트를 공부하면서 느끼는 점 중 하나는, 코드를 이해하는 것이 중요한 게 아니라 어떻게 하면 비슷한 유형의 문제를 만났을 때 저렇게 코드를 구현할 생각을 할 수 있을지 깨닫는 것이 중요하다는 것이다.
+* 처음 문제를 접했을 때는 sum - m이라는 수식 때문에 머리를 싸매고 고민했다.
+* 그리고 왜 맵을 사용했을까에 대한 깊은 고민을 했다.
+* 이 문제는 음수가 있기 때문에 어떤 값이 있을지 모른다. 그래서 우선 sum이라는 변수를 반복문을 돌면서 쭉 누적했다.
+* 처음부터 i까지의 합에서 처음부터 일정 구간 까지의 합을 뺀다는 것은, 일정 구간에서 i까지의 합과 같은 결과이다.
+* 이 문제는 이 원리를 활용해서 푸는 문제였고, 그 횟수를 answer에 더해주기 위해서 저장하는 용도로 map을 사용했다.
+
+
+## 연속 부분수열 3
+N개의 수로 이루어진 수열이 주어집니다.  
+이 수열에서 연속부분수열의 합이 특정숫자 M이하가 되는 경우가 몇 번 있는지 구하는 프로그램을 작성하세요.  
+만약 N=5, M=5이고 수열이 다음과 같다면  
+13123  
+합이 5이하가 되는 연속부분수열은 {1}, {3}, {1}, {2}, {3}, {1, 3}, {3, 1}, {1, 2}, {2, 3}, {1, 3, 1}로 총 10가지입니다. 
+ 
+```javascript
+function solution(nums, m) {
+    let answer = 0;
+    let lt = 0;
+    let sum = 0;
+
+    for (let rt = 0; rt < nums.length; rt++) {
+        sum += nums[rt];
+
+        while (sum > m) {
+            sum -= nums[lt++];
+        }
+
+        answer += rt - lt + 1;
+    }
+
+    return answer;
+}
+```
+* lt랑 rt 사용해서 해결
+* rt가 증가하면 계속해서 sum에 rt부터 lt까지의 합을 더해준다.
+* sum이 목표 값보다 커지면 lt를 증가시킨다. (while문 사용)
+* 반복문이 끝나기 전에 rt인덱스에서 lt인덱스를 빼고, 1을 더하면 그 구간까지의 부분수열의 개수가 된다.
+
+## 연속된 자연수의 합
+N입력으로 양의 정수 N이 입력되면 2개 이상의 연속된 자연수의 합으로 정수 N을 표현하는 방법의 가짓수를 출력하는 프로그램을 작성하세요.  
+만약 N=15이면  
+7+8=15  
+4+5+6=15  
+1+2+3+4+5=15  
+와 같이 총 3가지의 경우가 존재한다.   
+ 
+```javascript
+function solution(n) {
+    let answer = 0;
+    let lt = 1;
+    let sum = 0;
+
+    for (let rt = 1; rt < n; rt++) {
+        sum += rt;
+
+        while (sum > n) {
+            sum -= lt++;
+        }
+
+        if(sum === n) answer++;
+    }
+
+    return answer;
+}
+```
+* rt를 1부터 시작하여 sum에 더한다.
+* sum이 목표값보다 커지면 sum에서 lt를 빼고 lt를 1 증가시킨다. (while문으로 구현)
+* sum이 목표값과 같아지면 answer를 증가시킨다.
+
+```javascript
+function solution(n) {
+    let answer = 0;
+    let cnt = 1;
+    n--;
+
+    while(n>0) {
+        cnt++;
+        n-=cnt;
+        if(n%cnt === 0) answer++;
+    }
+    return answer;
+}
+```
+* 기발한 방법으로 이런 방법도 있다.
+* 두 개의 연속된 수 1, 2를 n에서 뺀다.
+* 남은 n을 연속된 수의 개수로 나눈다.
+* 나누어 떨어지면 연속된 자연수가 있다는 뜻이다.
+* 이 동작을 n이 0보다 클 때까지 반복한다.
+
+## 모든 아나그램 찾기 
+S문자열에서 T문자열과 아나그램이 되는 S의 부분문자열의 개수를 구하는 프로그램을 작성하세요.     
+아나그램 판별시 대소문자가 구분됩니다. 부분문자열은 연속된 문자열이어야 합니다.   
+
+```javascript
+function solution(s, t) {
+    let answer = 0;
+    let n = t.length;
+    let sH = new Map();
+
+    for (let i = 0; i < n; i++) {
+        sH.set(t[i], sH.get(t[i]) - 1 || -1);
+    }
+
+    for (let i = 0; i < n-1; i++) {
+        if (sH.get(s[i]) === -1) sH.delete(s[i]);
+        else sH.set(s[i], sH.get(s[i]) + 1 || 1);
+    }
+    
+    let lt = 0;
+    for (let rt = n-1; rt < s.length; rt++) {
+        if (sH.get(s[rt]) === -1) sH.delete(s[rt]);
+        else sH.set(s[rt], sH.get(s[rt]) + 1 || 1);
+
+        if (sH.size === 0) answer++;
+
+        if (sH.get(s[lt]) === 1) sH.delete(s[lt]);
+        else sH.set(s[lt], sH.get(s[lt]) - 1 || -1);
+        lt++;
+        console.log(sH);
+    }
+
+    return answer;
+}
+
+console.log(solution('bacaAacba', 'abc'));
+```
+* t문자열을 맵에 -1로 저장하고, s문자열을 순차적으로 조회한다.
+* s문자열을 키로 맵에서 조회해서 1을 더한다.
+* 반복문을 돌 때마다 맵을 조회해서 사이즈가 0이되면 아나그램이라고 판단한다.
+
