--- a/_posts/2021-07-28-0726-0801.md
+++ b/_posts/2021-07-28-0726-0801.md
@@ -1158,3 +1158,215 @@ console.log(solution('bacaAacba', 'abc'));
 * s문자열을 키로 맵에서 조회해서 1을 더한다.
 * 반복문을 돌 때마다 맵을 조회해서 사이즈가 0이되면 아나그램이라고 판단한다.
 
+## 0730
+# 15일 차 그리디, 우선순위 큐 문제
+## 동전교환
+다음과 같이 여러 단위의 동전들이 주어져 있을때 거스름돈을 가장 적은 수의 동전으로 교환 해주려면 어떻게 주면 되는가? 
+각 단위의 동전은 무한정 쓸 수 있다. 
+
+```javascript
+function solution(nums, m) {
+    let answer = 0; 
+    let n = nums.length;
+
+    for (let i = n - 1; i >= 0; i--) {
+        answer += parseInt(m / nums[i]);
+        m = m % nums[i];
+    }
+
+    return answer;
+}
+
+console.log(solution([1, 5, 10], 15));
+```
+* 그리디 - 그 단계에서 제일 좋은 것을 선택하는 알고리즘
+* 가장 큰 단위의 동전을 돈에서 나눈 값을 answer에 더한다.
+* 나머지 값을 m에 다시 저장한다.
+* 동전의 단위가 배수여야지 그리디 알고리즘을 적용 가능한다.
+
+## 침몰하는 타이타닉
+유럽에서 가장 유명했던 유람선 타이타닉이 침몰하고 있습니다. 유람선에는 N명의 승객이 타고 있습니다.   
+구명보트를 타고 탈출해야 하는데 타이타닉에 있는 구명보트는 2명 이하로만 탈 수 있으며, 보트 한 개에 탈 수 있는 총 무게도 Mkg 이하로 제한되어 있습니다.   
+N명의 승객 몸무게가 주어졌을 때 승객 모두가 탈출하기 위한 구명보트의 최소개수를 출력하는 프로그램을 작성하세요. 
+
+```javascript
+function solution(nums, m) {
+    let answer = 0;
+    let n = nums.length;
+    let lt = 0;
+
+    nums.sort((a, b) => a - b);
+
+    for (let rt = n - 1; rt >= lt; rt--) {
+        if (nums[lt] + nums[rt] <= m) lt++;
+
+        answer++;
+    }
+
+    return answer;
+}
+
+console.log(solution([90, 50, 70, 100, 60], 140));
+```
+* 배열을 오름차순으로 정렬하고, lt와 rt를 처음과 끝 인덱스로 지정한다.
+* rt가 lt보다 같거나 커질때까지 rt를 감소시키고, 두 인덱스에 위치하는 값들 합이 m보다 작거나 같으면  lt를 증가시켰다.
+* 반복문이 반복되는 횟수만큼 answer를 증가시켰다.
+
+## 회의실 배정 
+한 개의 회의실이 있는데 이를 사용하고자 하는 n개의 회의들에 대하여 회의실 사용표를 만들려고 한다.   
+각 회의에 대해 시작시간과 끝나는 시간이 주어져 있고, 각 회의가 겹치지 않게 하면서 회의실을 사용할 수 있는 최대수의 회의를 찾아라.   
+단, 회의는 한번 시작하면 중간에 중단될 수 없으며 한 회의가 끝나는 것과 동시에 다음 회의가 시작될 수 있다. 
+
+```javascript
+function solution(meeting) {
+    let answer = 0;
+
+    meeting.sort((a, b) => {
+        if (a[1] === b[1]) return a[0] - b[0];
+        else return a[1] - b[1];
+    })
+
+    let tmp = 0;
+
+    for (let x of meeting) {
+        if (tmp > x[0]) continue;
+
+        tmp = x[1];
+        answer++;
+    }
+
+    return answer;
+}
+```
+* 제일 먼저 끝나는 회의를 선택하는 것이 최적
+* 그리디를 사용하는 이유는 n^2를 만들지 않기 위해서이다. 시간복잡도를 nlgn으로 바꾸기 위함
+
+
+## 수열의 높이 조정
+N길이의 수열이 주어집니다. 수열의 높이 조정은 수열의 원소값 중 가장 큰 원소에서 1을 빼 가장 작은 원소에 더해주는 것을 말합니다. 가장 큰 원소와 가장 작은 원소가 여러개면 그 중 아무거나 선택하면 됩니다.  
+만약 수열이 [2, 1, 3, 7, 5]라면 1회의 높이조정을 거치면 [2, 2, 3, 6, 5]가 됩니다. N길이의 수열이 주어지면 높이조정을 m회 한 후 가장 큰 값과 가장 작은 값을 차을 출력하는 프로그램을 작성하세요. 
+
+```javascript
+
+function solution(nums) {
+    let answer;
+    let h = new maxHeap();
+
+    for (let x of nums) {
+        h.insert(x);
+    }
+    while (h.size() > 1) {
+        let a = h.get();
+        let b = h.get();
+
+        if (a !== b) h.insert(a-b);
+    }
+    answer = h.get() || 0
+
+    return answer;
+}
+
+console.log(solution([5, 2, 4, 3, 1]));
+console.log(solution([7, 6, 3, 2, 4, 5, 1]));
+```
+* maxheap을 사용해서 풀어야 하는 문제이다.
+* 힙을 생성해서 배열의 요소를 모두 삽입하였다.
+* 그 중 큰 수 두개를 꺼내고, 두 개가 다른 경우에만 insert하였다.
+* 이 행위를 힙 사이즈가 1보다 클 때까지 반복해서, 요소가 하나만 남게 하여 그 수를 반환하였다.
+
+
+### maxheap
+* 0번 인덱스에는 큰 숫자를 넣는다.
+* 1번 인덱스가 트리의 루트
+* 왼쪽 자식 인덱스 - 부모 인덱스 * 2
+* 오른쪽 자식 인덱스 - 부모 인덱스 * 2 + 1
+* 자식 인덱스 = 부모 인덱스 / 2 (parseInt 사용)
+* maxheap은 부모의 값이 항상 자식보다 크거나 같다.
+
+```javascript
+ class maxHeap{
+    constructor() {
+        this.heap = [];
+        this.heap.push(Number.MAX_SAFE_INTEGER);
+    }
+    insert(val){
+        this.heap.push(val);
+        this.upheap(this.heap.length-1);
+    }
+    upheap(pos) {
+        let tmp = this.heap[pos];
+
+        while(tmp > this.heap[parseInt(pos / 2)]) {
+            this.heap[pos] = this.heap[parseInt(pos / 2)];
+            pos = parseInt(pos / 2);
+        }
+        this.heap[pos] = tmp;
+    }
+    get() {
+        if(this.heap.length===2){
+            return this.heap.pop();
+        }
+        let res = this.heap[1];
+        this.heap[1] = this.heap.pop();
+        this.downheap(1, this.heap.length-1);   // 루트로 올라간 값이 내려가면서 자기 자신을 찾아가는 과정
+        return res;
+    }
+    downheap(pos, len) {    
+        let tmp = this.heap[pos]; 
+        let child;
+        while(pos <= parseInt(len/2)) {
+            child=pos*2; 
+            if (child < len && this.heap[child] < this.heap[child + 1]) child++;
+            if (tmp >= this.heap[child]) break;
+            this.heap[pos] = this.heap[child];
+            pos=child;
+        }
+        this.heap[pos] = tmp;
+    }
+    size() {
+        return this.heap.length - 1;
+    }
+    show() {
+        for(let i = 1; i <= this.size(); i++) {
+            console.log(this.heap[i]);
+        }
+        return true;
+    }
+}
+```
+
+
+## 최대 수입 스케쥴
+현수는 유명한 강연자이다. N개이 기업에서 강연 요청을 해왔다. 각 기업은 D일 안에 와서 강연을 해 주면 M만큼의 강연료를 주기로 했다.  
+각 기업이 요청한 D와 M의 정보를 바탕으로 가장 많을 돈을 벌 수 있도록 강연 스케쥴을 짜야 한다.  
+단 강연의 특성상 현수는 하루에 하나의 기업에서만 강연을 할 수 있다. 
+
+```javascript
+function solution(nums) {
+    let answer = 0;
+    let h = new maxHeap();
+
+    nums.sort((a, b) => b[1] - a[1]);
+    
+    let n = nums[0][1];
+    let j = 0;
+    for (let i = n; i >= 1; i--) {
+        for (; j<nums.length; j++) {
+            if (nums[j][1] === i) h.insert(nums[j][0]);
+            else break;
+        }
+        if(h.size() > 0) {
+            answer += h.get();
+        }
+    }
+
+    return answer;
+}
+
+console.log(solution([[50, 2], [20, 1], [40, 2], [60, 3], [30, 3], [30, 1]]));
+console.log(solution([[50, 2], [40, 2], [20, 1], [10, 1]]));
+```
+* 우선 매개변수로 받은 배열을 많이 남은 날짜 순서로 내림차순 한다.
+* 반복문을 돌려서 최대 날짜부터 하루씩 줄여가며 반복하고, 해당하는 날에 있는 스케쥴을 힙에 insert하여 최대 요소만 꺼내 정답에 더한다.
+
+
