--- a/_posts/2021-07-28-0726-0801.md
+++ b/_posts/2021-07-28-0726-0801.md
@@ -1370,3 +1370,63 @@ console.log(solution([[50, 2], [40, 2], [20, 1], [10, 1]]));
 * 반복문을 돌려서 최대 날짜부터 하루씩 줄여가며 반복하고, 해당하는 날에 있는 스케쥴을 힙에 insert하여 최대 요소만 꺼내 정답에 더한다.
 
 
+## 0731
+최솟값을 반환하는 minHeap 구현을 했다.
+
+### minheap
+```javascript
+class minHeap {
+    constructor() {
+        this.heap = [];
+        this.heap.push(Number.MIN_SAFE_INTEGER);
+    }
+    insert(val) {
+        this.heap.push(val);
+        this.upheap(this.heap.length - 1);
+    }
+    upheap(pos) {
+        let tmp = this.heap[pos];
+
+        while (tmp < this.heap[parseInt(pos / 2)]) {
+            this.heap[pos] = this.heap[parseInt(pos / 2)];
+            pos = parseInt(pos / 2);
+        }
+
+        this.heap[pos] = tmp;
+    }
+    get() {
+        if (this.heap.length === 2) {
+            return this.heap.pop();
+        }
+
+        let res = this.heap[1];
+        this.heap[1] = this.heap.pop();
+        this.downheap(1, this.heap.length - 1);
+        return res;
+    }
+    downheap(pos, len) {
+        let tmp = this.heap[pos];
+        let child;
+
+        while(pos <= parseInt(len / 2)) {
+            child = pos * 2;
+            if (child < len && this.heap[child] > this.heap[child + 1]) child++;
+            if (tmp <= this.heap[child]) break;
+            this.heap[pos] = this.heap[child];
+            pos = child;
+        }
+        this.heap[pos] = tmp;
+    }
+    size() {
+        return this.heap.length - 1;
+    }
+    show() {
+        for(let i = 1; i <= this.size(); i++) {
+            console.log(this.heap[i]);
+        }
+        return true;
+    }
+}
+```
+* maxheap 구현을 복습하면서 구현했다.
+* maxheap과 반대로 최소의 값을 반환하는 힙 자료구조이다.
