--- a/_posts/2021-07-28-0726-0801.md
+++ b/_posts/2021-07-28-0726-0801.md
@@ -1430,3 +1430,37 @@ class minHeap {
 ```
 * maxheap 구현을 복습하면서 구현했다.
 * maxheap과 반대로 최소의 값을 반환하는 힙 자료구조이다.
+
+## 0801
+교육 과정을 통학하기 시작한 지 1주일이 흘렀다.  
+정말 많이 공부한거 같은데 고작 5일밖에 안됐다는게 믿기지가 않는다.  
+혼자 공부했을 때보다 최소 5배이상 빠른 속도로 성장중이다.  
+코딩테스트에 대한 자신감이 많이 붙은 것 같다.
+
+## DFS 예습 문제풀이
+자연수 N이 주어지면 1부터 N까지의 원소를 갖는 집합의 부분집합을 모두 출력하는 프로그램을 작성하세요.
+
+```javascript
+function solution(n) {
+    let answer = [];
+    let part = [];
+
+    function DFS(L) {
+        if (L === n + 1) {
+            if(part.length !== 0) answer.push(part.slice());
+        } else {
+            part.push(L);
+            DFS(L + 1);
+            part.pop(L);
+            DFS(L + 1);
+        }
+    }
+    DFS(1);
+
+    return answer;
+}
+console.log(solution(3));
+```
+* 코드를 곱씹으면서 스택을 그리고, 어떤 식으로 동작하고 동작시킬지에 대해 고민해봤다.
+* 트리를 그려보고 각 숫자를 선택하고, 선택하지 않고로 나누어서 코딩하면 좀 더 쉽게 접근할 수 있을 것 같다.
+* 우선 코드를 이해했으니 수업을 듣고, 어떻게 하면 생각을 코드로 구현할지에 대해 고민해봐야겠다.
